--- a/R4-1/ANT/build.xml
+++ b/R4-1/ANT/build.xml
@@ -31,6 +31,7 @@
 				secretsPassword="${secrets.password}"
 				testEnvironmentSecretsPassword="${testenvironment.secretspassword}"
 				invokeTestRunMonitor="true"
+				licensePath="C:\Users\Incapsulate\Provar\.licenses"
 				>
 		
 			<fileset dir="../tests/ESRI"><include name="c1489(1)StreetAddressLocationCanBeSearchedAsAnAddress.testcase"/></fileset>
